--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Authentication.LoginFragment"
-    android:background="@color/offWhite"
+    android:background="@color/white"
     >
 
     <ImageView
@@ -106,7 +106,7 @@
 
              android:id="@+id/google"
             android:src="@drawable/googlee"
-            android:backgroundTint="@color/offWhite"
+            android:backgroundTint="@color/white"
 
             />
     </androidx.cardview.widget.CardView>
