--- a/app/src/main/res/layout/fragment_filtered_meals.xml
+++ b/app/src/main/res/layout/fragment_filtered_meals.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homeTabs.search.chosenMeals.view.FilteredMealsFragment">
+    tools:context=".homeTabs.search.FilteredMeals.view.FilteredMealsFragment">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
