--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/search24"
+        android:drawablePadding="8dp"
         android:layout_marginHorizontal="16dp"
         android:hint="Search"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +45,7 @@
             android:layout_height="wrap_content"
             android:text="Category"
             android:id="@+id/chipCategory"
-            android:backgroundTint="@color/primary"
+            app:chipBackgroundColor="@color/primary"
             android:textColor="@color/white"
             style="@style/Widget.Material3.Chip.Filter"
             />
@@ -53,14 +55,14 @@
             android:text="Country"
             android:id="@+id/chipCoountry"
             android:textColor="@color/white"
-            android:backgroundTint="@color/primary"
+            app:chipBackgroundColor="@color/primary"
             style="@style/Widget.Material3.Chip.Filter"
             />
         <com.google.android.material.chip.Chip
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ingredient"
-            android:backgroundTint="@color/primary"
+            app:chipBackgroundColor="@color/primary"
             android:textColor="@color/white"
             android:id="@+id/chipIngredient"
             style="@style/Widget.Material3.Chip.Filter"
