--- a/app/src/main/res/navigation/nav_graph_tabs.xml
+++ b/app/src/main/res/navigation/nav_graph_tabs.xml
@@ -57,7 +57,7 @@
     </fragment>
     <fragment
         android:id="@+id/planFragment"
-        android:name="com.example.hungerhub.homeTabs.plan.PlanFragment"
+        android:name="com.example.hungerhub.homeTabs.plan.view.PlanFragment"
         android:label="fragment_plan"
         tools:layout="@layout/fragment_plan" />
     <fragment
