--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/dailyRecipesText"
         android:text="Meal of the day"
-
         android:layout_marginStart="18dp"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="46dp"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -32,10 +31,10 @@
          app:layout_constraintTop_toBottomOf="@id/dailyRecipesText"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginEnd="32dp"
-         android:layout_marginTop="0dp"
+         android:layout_marginTop="16dp"
          android:id="@+id/card"
          android:backgroundTint="@color/primary"
-         app:cardElevation="10dp"
+         app:cardElevation="32dp"
          app:cardCornerRadius="8dp"
 
          >
@@ -47,6 +46,7 @@
                  android:id="@+id/mealPhoto"
                  android:layout_height="265dp"
                  android:scaleType="centerCrop"
+
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:src="@drawable/logo"
@@ -67,5 +67,31 @@
          </androidx.constraintlayout.widget.ConstraintLayout>
 
      </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        android:id="@+id/dailyRecipes"
+        android:text="All Suggestions for today"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="32dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:background="@drawable/custom_text"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingVertical="8dp"
+
+        />
+    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/viewPager"
+        app:layout_constraintTop_toBottomOf="@id/dailyRecipes"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
