--- a/app/src/main/res/layout/fragment_filtered_meals.xml
+++ b/app/src/main/res/layout/fragment_filtered_meals.xml
@@ -12,6 +12,9 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="16dp"
+        android:drawableStart="@drawable/search24"
+        android:drawableTint="@color/primary"
+        android:drawablePadding="16dp"
         android:hint="Search"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingStart="8dp"
@@ -42,7 +45,6 @@
         app:layout_constraintTop_toBottomOf="@id/titleFilter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:paddingTop="8dp"
         android:id="@+id/rv"
         />
