--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,6 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="32dp"
         android:drawableStart="@drawable/search24"
+        android:drawableTint="@color/primary"
         android:drawablePadding="8dp"
         android:layout_marginHorizontal="16dp"
         android:hint="Search"
