--- a/app/src/main/res/navigation/nav_graph_tabs.xml
+++ b/app/src/main/res/navigation/nav_graph_tabs.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_favFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_favFragment_to_detailedMealFragment"
+            app:destination="@id/detailedMealFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
@@ -59,7 +62,11 @@
         android:id="@+id/planFragment"
         android:name="com.example.hungerhub.homeTabs.plan.view.PlanFragment"
         android:label="fragment_plan"
-        tools:layout="@layout/fragment_plan" />
+        tools:layout="@layout/fragment_plan" >
+        <action
+            android:id="@+id/action_planFragment_to_detailedMealFragment"
+            app:destination="@id/detailedMealFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailedMealFragment"
         android:name="com.example.hungerhub.homeTabs.detailedItem.view.DetailedMealFragment"
