--- a/app/src/main/res/layout/fav_item.xml
+++ b/app/src/main/res/layout/fav_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="380dp"
     android:id="@+id/card"
-    android:layout_height="260dp"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
