--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -30,7 +30,7 @@
 
         />
     <item
-        android:id="@+id/logOut"
+        android:id="@+id/loginFragment2"
         android:title="Log out"
         android:icon="@drawable/logout"
 
