--- a/app/src/main/res/layout/fav_item.xml
+++ b/app/src/main/res/layout/fav_item.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="The Meal name"
+                android:text="@string/the_meal_name"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"
@@ -59,7 +59,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="8dp"
                 android:textSize="14sp"
-                android:text="zzzzzzzzzzz"
+                android:text="@string/area"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@id/world"
@@ -72,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:text="Remove"
+                android:text="@string/remove"
                 android:textColor="@color/primary"
                 android:backgroundTint="@color/white"
                 android:layout_marginEnd="8dp"
